--- a/_config.yml
+++ b/_config.yml
@@ -86,11 +86,11 @@ pinboard_user:
 pinboard_count: 3
 
 # Delicious
-delicious_user:
+delicious_user: 
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: c0rwinnotes
 disqus_show_comment_count: false
 
 # Google Analytics
