Add my google+ ID.

--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user: izzyyy@gmail.com
+googleplus_user: 103540838953598223632
 googleplus_hidden: false
 
 # Pinboard
