Blog entry with how to compute HITS on MongoDB + integrate LaTex into octopress.

--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ markdown: rdiscount
 rdiscount:
   extensions:
     - autolink
-    - footnotes
     - smart
+    - preserve_math
 pygments: false # default python pygments have been replaced by pygments.rb
 
 paginate: 10          # Posts per page on the blog index
